--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ bleach==5.0.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 contourpy==1.0.6
 cycler==0.11.0
 debugpy==1.6.3
@@ -25,6 +26,7 @@ ipython==8.4.0
 ipython-genutils==0.2.0
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.15.0
 jupyter-core==4.11.1
 jupyter_client==7.3.5
@@ -40,6 +42,7 @@ nbclient==0.6.7
 nbconvert==7.0.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
+nltk==3.8.1
 notebook==6.4.12
 numpy==1.23.3
 packaging==21.3
@@ -67,6 +70,7 @@ pyspark==3.3.0
 python-dateutil==2.8.2
 pytz==2022.4
 pyzmq==23.2.1
+regex==2022.10.31
 requests==2.28.1
 scikit-misc==0.1.4
 scipy==1.9.3
@@ -78,9 +82,11 @@ statsmodels==0.13.5
 terminado==0.15.0
 tinycss2==1.1.1
 tornado==6.2
+tqdm==4.64.1
 traitlets==5.3.0
 urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
+wordcloud==1.8.2.2
 yarg==0.1.9
 zipp==3.8.1
