--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,13 @@ cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
+diagrams==0.23.2
 docopt==0.6.2
 entrypoints==0.4
 executing==1.0.0
 fastjsonschema==2.16.1
 fonttools==4.38.0
+graphviz==0.20.1
 idna==3.3
 importlib-metadata==4.12.0
 ipykernel==6.15.2
@@ -84,6 +86,7 @@ tinycss2==1.1.1
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.3.0
+typed-ast==1.5.4
 urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
