--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+boto3==1.26.54
+botocore==1.29.54
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -15,6 +17,7 @@ debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
 diagrams==0.23.2
+dill==0.3.6
 docopt==0.6.2
 entrypoints==0.4
 executing==1.0.0
@@ -28,6 +31,7 @@ ipython==8.4.0
 ipython-genutils==0.2.0
 jedi==0.18.1
 Jinja2==3.1.2
+jmespath==1.0.1
 joblib==1.2.0
 jsonschema==4.15.0
 jupyter-core==4.11.1
@@ -52,6 +56,7 @@ palettable==3.3.0
 pandas==1.5.0
 pandocfilters==1.5.0
 parso==0.8.3
+patchworklib==0.5.0
 patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -74,8 +79,10 @@ pytz==2022.4
 pyzmq==23.2.1
 regex==2022.10.31
 requests==2.28.1
+s3transfer==0.6.0
 scikit-misc==0.1.4
 scipy==1.9.3
+seaborn==0.12.2
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.2.post1
