--- a/_language.yml
+++ b/_language.yml
@@ -6,9 +6,9 @@ related-notebooks-title: "Notebooks"
 source-notebooks-prefix: "Źródło"
 
 section-title-abstract: "Abstrakt"
-section-title-appendices: "Załączniki"
+section-title-appendices: "ZAŁĄCZNIKI"
 section-title-footnotes: "Przypisy"
-section-title-references: "Bibliografia"
+section-title-references: "BIBLIOGRAFIA"
 section-title-reuse: "Licencja"
 section-title-copyright: "Prawa autorskie"
 section-title-citation: "Cytowanie"
@@ -57,8 +57,8 @@ search-clear-button-title: "Wyczyść"
 search-detached-cancel-button-title: "Anuluj"
 search-submit-button-title: "Zatwierdź"
 
-crossref-fig-title: "Rysunek"
-crossref-tbl-title: "Tabela"
+crossref-fig-title: "Rys."
+crossref-tbl-title: "Tab."
 crossref-lst-title: "Wykaz"
 crossref-thm-title: "Twierdzenie"
 crossref-lem-title: "Lemat"
